--- a/MyResumeProject/Calculator-Final-Project-main/src/App.module.css
+++ b/MyResumeProject/Calculator-Final-Project-main/src/App.module.css
@@ -1,5 +1,25 @@
 .calculator {
-  border: 1px solid rgba(90, 90, 90);
+  border: 2px solid rgb(0, 0, 0);
   width: 200px;
   border-radius: 5px;
+  margin-left: 35%;
 }
+
+
+/* App.css */
+
+
+
+body::before {
+  content: '';
+  position: fixed; /* Use fixed to cover the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/image.jpg') center/cover no-repeat; /* Replace with your image path */
+  opacity: 0.5; /* Adjust the opacity here */
+  z-index: -1; /* Ensure the pseudo-element is behind the content */
+  
+}
+
